# serializer version: 1
# name: test_climate_state_snapshot[ac][climate.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'silent',
        'low',
        'medium',
        'high',
        'full',
        'auto',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'comfort',
        'eco',
        'boost',
        'sleep',
        'away',
      ]),
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'off',
        'vertical',
        'horizontal',
        'both',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea_lan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': None,
    'unique_id': '12345678_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_state_snapshot[ac][climate.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 50.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.0,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'auto',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'silent',
        'low',
        'medium',
        'high',
        'full',
        'auto',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'comfort',
        'eco',
        'boost',
        'sleep',
        'away',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 441>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'both',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'off',
        'vertical',
        'horizontal',
        'both',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_climate_state_snapshot[c3][climate.bedroom_ac_zone_1_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_ac_zone_1_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 1 thermostat',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 1 thermostat',
    'platform': 'midea_lan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': 'climate_zone1',
    'unique_id': '12345678_climate_zone1',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_state_snapshot[c3][climate.bedroom_ac_zone_1_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC Zone 1 thermostat',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1.0,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 22.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_ac_zone_1_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_climate_state_snapshot[c3][climate.bedroom_ac_zone_2_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 29.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_ac_zone_2_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Zone 2 thermostat',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Zone 2 thermostat',
    'platform': 'midea_lan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': 'climate_zone2',
    'unique_id': '12345678_climate_zone2',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_state_snapshot[c3][climate.bedroom_ac_zone_2_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC Zone 2 thermostat',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 29.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 23.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_ac_zone_2_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_climate_state_snapshot[cc][climate.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Low',
        'Medium',
        'High',
        'Auto',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'sleep',
        'eco',
      ]),
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'off',
        'on',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea_lan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 441>,
    'translation_key': None,
    'unique_id': '12345678_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_state_snapshot[cc][climate.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'High',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Low',
        'Medium',
        'High',
        'Auto',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.AUTO: 'auto'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'sleep',
        'eco',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 441>,
      <ClimateEntityStateAttribute.SWING_MODE: 'swing_mode'>: 'on',
      <ClimateEntityCapabilityAttribute.SWING_MODES: 'swing_modes'>: list([
        'off',
        'on',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_climate_state_snapshot[cf][climate.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea_lan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '12345678_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_state_snapshot[cf][climate.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 30.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 16.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_climate_state_snapshot[fb][climate.bedroom_ac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Auto',
        'ECO',
        'Sleep',
        'Anti-freezing',
        'Comfort',
        'Constant-temperature',
        'Normal',
        'Fast-heating',
        'Standby',
      ]),
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.bedroom_ac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'midea_lan',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '12345678_climate',
    'unit_of_measurement': None,
  })
# ---
# name: test_climate_state_snapshot[fb][climate.bedroom_ac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 20.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Bedroom AC',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'Comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'Auto',
        'ECO',
        'Sleep',
        'Anti-freezing',
        'Comfort',
        'Constant-temperature',
        'Normal',
        'Fast-heating',
        'Standby',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 1,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.bedroom_ac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
